@@ -919,6 +919,7 @@
   'FR5ZQ/E' => '114',
   'FR5ZQ/G' => '113',
   'FR5ZQ/J' => '114',
+  'FR5ZQ/T' => '115',
   'FR5ZU/E' => '114',
   'FR5ZU/G' => '113',
   'FR5ZU/J' => '114',
