@@ -120,7 +120,7 @@ St. Pierre & Miquelon:    NA: 09: 05: FP:    FP=TO5M=TO7I;
 Reunion:                  AF: 53: 39: FR:    FR=TO3R;
 Glorioso:                 AF: 53: 39: FR/g:  FR5AI=FR5ZQ/G=FR5ZU/G=FR7GL;
 Juan de Nova & Europa:    AF: 53: 39: FR/j:  FR4FA=FR5ZQ/E=FR5ZQ/J=FR5ZU/E=FR5ZU/J;
-Tromelin:                 AF: 53: 39: FR/t:  FR5ZU/T=FR7CG;
+Tromelin:                 AF: 53: 39: FR/t:  FR5ZQ/T=FR5ZU/T=FR7CG;
 Crozet:                   AF: 68: 39: FT8W:  FT0W=FT2W=FT4W=FT5W=FT8W;
 Kerguelen:                AF: 68: 39: FT8X:  FT0X=FT2X=FT4X=FT5X=FT8X;
 Amsterdam & St. Paul:     AF: 68: 39: FT8Z:  FT0Z=FT2Z=FT4Z=FT5Z=FT8Z;
