@@ -52,12 +52,16 @@ package DXM;
 				homebbs => 'Home BBS set to: $_[0]',
 				homenode => 'Home Node set to: $_[0]',
 				hnodee1 => 'Please enter your Home Node, set/homenode <your home DX Cluster>',
+				hnodee2 => 'Failed to set homenode on $_[0]',
 				hnode => 'Your Homenode is now \"$_[0]\"',
 				iso => '$_[0] Isolated',
 				isou => '$_[0] UnIsolated',
 				isoc => '$_[0] created and Isolated',
 				l1 => 'Sorry $_[0], you are already logged on on another channel',
 				l2 => 'Hello $_[0], this is $main::mycall in $main::myqth running DXSpider V$main::version',
+				lang => 'Language is now $_[0]',
+				lange1 => 'set/language <lang> where <lang> is one of ($_[0])',
+				lange2 => 'failed to set language on $_[0]', 
 				lh1 => '$main::data/hop_table.pl doesn\'t exist',
 				loce1 => 'Please enter your location,, set/location <latitude longitude>',
 				loce2 => 'Don\'t recognise \"$_[0]\" as a Lat/Long (eg 52 20 N 0 16 E)',
@@ -107,6 +111,104 @@ package DXM;
 				wwvu => 'WWV flag unset on $_[0]',
 				wxs => 'WX flag set on $_[0]',
 				wxu => 'WX flag unset on $_[0]',
+		},
+  nl => {
+		 addr => 'Addres gezet op: $_[0]',
+		 already => '$_[0] reeds geconnect',
+		 anns => 'Announce berichten AAN gezet voor $_[0]',
+		 annu => 'Announce berichten UIT gezet voor $_[0]',
+		 bbse1 => 'Geef je home bbs (mailbox),, set/bbs <home mailbox>',
+		 bbs => 'Je home bbs (mailbox) is nu \"$_[0]\"',
+		 beepoff => 'De beep staat nu UIT',
+		 beepon => 'De beep staat nu AAN',
+		 conother => 'Sorry $_[0] je bent reeds geconnect op een andere poort',
+		 concluster => 'Sorry $_[0] je bent reeds op een ander cluster geconnect',
+		 conscript => 'Geen connectscript aangeroepen \"$_[0]\" gevonden in $main::root/connect',
+		 confail => 'Verbinding met $_[0] mislukt ($_[1])',
+		 constart => 'Verbinding met $_[0] gestart',
+		 disc1 => 'Gedisconnect door $_[0]',
+		 disc2 => '$_[0] gedisconnect',
+		 dx1 => 'Frequentie $_[0] valt niet binnen een band [Opdracht: DX freq call commentaar](Zie sh/band)',
+		 dx2 => 'Ik heb een call nodig! [Opdracht: DX freq call commentaar]',
+		 dxs => 'DX Spots worden WEL doorgegeven aan $_[0]',
+		 dxu => 'DX Spots worden NIET doorgegeven aan $_[0]',
+		 e1 => 'Ongeldige opdracht',
+		 e2 => 'Fout: $_[0]',
+		 e3 => '$_[0]: $_[1] niet gevonden',
+		 e4 => 'Minimaal een prefix of een call nodig',
+		 e5 => 'Niet toegestaan',
+		 e6 => '*** Geen station gespecifiseerd ***',
+		 e7 => 'Callsign $_[0] is niet zichtbaar op het cluster',
+		 e8 => 'Ik heb een call en tekst nodig',
+		 e9 => 'Ik heb wel tekst nodig voor een announce!',
+		 e10 => '$_[0] is niet lokaal verbonden',
+		 e12 => 'Ik heb een node call nodig',
+		 e13 => '$_[0] is geen node',
+		 emaile1 => 'Geef uw E-mail addres, set/email <uw e-mail addres>',
+		 emaila => 'Uw E-Mail addres is nu \"$_[0]\"',
+		 email => 'E-mail addres gezet op: $_[0]',
+		 helpe1 => 'Help systeem niet beschikbaar, meld dit aan de sysop',
+		 helpe2 => 'Geen help beschikbaar over \"$_[0]\"',
+		 heres => 'Aanwezigheid AAN gezet voor $_[0]',
+		 heade1 => 'Gebruik gemaakt van de $main::mycall coordinaten, overweeg een set/location of set/qra',
+		 hereu => 'Aanwezigheid UIT gezet voor $_[0]',
+		 homebbs => 'Uw Home mailbox is nu $_[0]',
+		 homenode => 'Uw (Home) DX-Cluster is : $_[0]',
+		 hnodee1 => 'Geef mij uw lokale (home) DX-cluster, set/homenode <DX-cluster>',
+		 hnode => 'Uw (home) DX-cluster is nu \"$_[0]\"',
+		 iso => '$_[0] is geisoleerd (Isolated)',
+		 isou => '$_[0] is niet meer geisoleerd (UnIsolated)',
+		 isoc => '$_[0] gecreerd en geisoleerd (Isolated)',
+		 l1 => 'Sorry $_[0], u bent reeds op een ander kanaal ingelogt',
+		 l2 => 'Hallo $_[0], dit is $main::mycall in $main::myqth met DXSpider V$main::version',
+		 lh1 => '$main::data/hop_table.pl bestaat niet',
+		 loce1 => 'Geef uw coordinaten met, set/location <latitude longitude>',
+		 loce2 => 'Herken \"$_[0]\" niet als Lat/Long (vb 52 20 N 0 16 E)',
+		 loc => 'Uw Latitude en Longitude zijn nu \"$_[0]\"',
+		 lockout => '$_[0] heeft geen toegang meer (Locked out)',
+		 lockoutun => '$_[0] heeft wederom toegang (Unlocked)',
+		 m2 => '$_[0] Informatie: $_[1]',
+		 merge1 => 'Merge verzoek voor $_[1] spots en $_[2] WWV verzonden naar $_[0]',
+		 msgnew => 'Er is nieuwe post gearriveerd voor u',
+		 namee1 => 'Geef aub uw naam met, set/name <uw naam>',
+		 namee2 => 'Gebruiker $_[0] niet te vinden!',
+		 name => 'Uw naam is gezet op \"$_[0]\"',
+		 node => '$_[0] gezet als een AK1A stijl DX-cluster',
+		 nodeu => '$_[0] teruggezet naar gebruiker status',
+		 nodec => '$_[0] gecreeerd als AK1A stijl DX-cluster',
+		 nodee1 => 'U kunt deze opdracht niet uitvoeren zolang ($_[0]) on-line is',
+		 ok => 'Opdracht succesvol uitgevoerd',
+		 page => 'Druk op Enter om door te gaan, A om af te breken (nog $_[0] regels) >',
+		 pagelth => 'Paginalengte gezet op ($_[0]) regels',
+		 passerr => 'Gebruik: SET/PASS <wachtwoord> <call>',
+		 password => 'Wachtwoord gezet of gewijzigd voor $_[0]',
+		 pingo => 'Ping gestart naar $_[0]',
+		 pingi => 'Ping ontvangen van $_[0] ($_[2] secs)',
+		 pr => '$_[0] de $main::mycall $main::cldate $main::ztime >',
+		 pr2 => '($_[0]) de $main::mycall $main::cldate $main::ztime >',
+		 priv => 'Privilege level gewijzigd op $_[0]',
+		 prx => '$main::mycall >',
+		 qll => 'Geef uw locator met set/location of set/qra',
+		 qthe1 => 'Geef uw woonplaats met, set/qth <woonplaats>',
+		 qth => 'Uw QTH is nu \"$_[0]\"',
+		 qrae1 => 'Geef uw QRA locator, set/qra <qra locator> (vb set/qra JO33FD)',
+		 qrashe1 => 'Geef uw QRA locator, vbg sh/qra JO33FD of sh/qra JO33FD IO93NS',
+		 qrae2 => 'Ik herken \"$_[0]\" niet als een QRA locator (vb JO33FD)',
+		 qra => 'Uw QRA Locator is nu \"$_[0]\"',
+		 rcmdo => 'RCMD \"$_[0]\" verzonden naar $_[1]',
+		 read1 => 'Sorry, geen berichten voor u',
+		 read2 => 'Bericht $_[0] niet gevonden',
+		 read3 => 'Bericht $_[0] niet beschikbaar',
+		 shutting => '$main::mycall gaat QRT...',
+		 sloc => 'Cluster lat $_[0] long $_[1], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
+		 sqra => 'Cluster QRA Locator$_[0], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
+		 talks => 'Talk berichten AAN gezet voor $_[0]',
+		 talku => 'Talk berichten UIT gezet voor $_[0]',
+		 usernf => '*** Gebruiker info van $_[0] niet gevonden ***',
+		 wwvs => 'WWV berichten AAN gezet voor $_[0]',
+		 wwvu => 'WWV berichten UIT gezet voor $_[0]',
+		 wxs => 'WX berichten AAN gezet voor $_[0]',
+		 wxu => 'WX berichten UIT gezet voor $_[0]',
 		},
   fr => {
 		},
